tests/invalid/no_space.c
int main() {
    return0;
}
// ERROR: Line 2, Error 2008